Fix bookshelf-display height and overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  height: 575px;
 }
 
 /* Bookshelf search */
